# audio_uploader

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
files/string32/: string.md
src/: Dockerfile  Makefile  main.py  pyproject.toml
src/api/: router.py
src/api/v1/: auth.py  uploader.py  user.py
src/core/: checkers.py  config.py  constants.py  exceptions.py
src/db/models/: __init__.py  audio.py
src/db/repositories/: audiofile.py
src/migrations/versions/: 2025-03-28_audiofile.py  2025-03-29_audiofile.py
src/schemas/: audiofile.py  auth.py
src/services/: audiofile.py  oauth.py
