[project]
name = "audio-uploader"
version = "0.0.1"
description = ""
authors = [
    {name = "MuratovER cooperative.entr@gmail.com"}
]
readme = "../README.md"
requires-python = "==3.13.2"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic[dotenv] (>=2.11.0,<3.0.0)",
    "sqlalchemy[mypy] (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "inflection (>=0.5.1,<0.6.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "httptools (>=0.6.4,<0.7.0)",
    "uvloop (>=0.21.0,<0.22.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "requests (>=2.32.3,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "types-requests (>=2.32.0.20250328,<3.0.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.2"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-factoryboy = "^2.7.0"

